--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,43 @@
 @charset "utf-8";
+/* RESET */
+* {
+  margin: 0;
+  padding: 0;
+  color: #333;
+}
+body {
+  overflow: hidden;
+}
+/* HEADER */
+header {
+  width: 100%;
+  height: 100px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
+}
+/* SLIDE */
+.main_slide_wrapper {
+  width: 100%;
+  height: 100vh;
+  max-width: 1920px;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.main_slide_wrapper li {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.main_slide_wrapper li img {
+  height: 100%;
+  display: block;
+}
+.main_slide_wrapper .main_slide2,
+.main_slide_wrapper .main_slide3 {
+  opacity: 0;
+}
