--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,25 @@
   margin: 0;
   padding: 0;
   color: #333;
+  font-family: 'Roboto', 'Noto Sans KR';
+  letter-spacing: -0.02em;
 }
 body {
   overflow: hidden;
+}
+ul, ol, li {
+  list-style: none;
+} 
+a {
+  text-decoration: none;
+}
+/* COMMON */
+.container {
+  width: 100%;
+  max-width: 1340px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
 }
 /* HEADER */
 header {
@@ -18,26 +34,158 @@ header {
   left: 0;
   z-index: 99;
 }
-/* SLIDE */
+.header_wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logo {
+  width: 20%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logo a {
+  display: block;
+}
+.logo img {
+  width: 252px;
+  height: 39px;
+}
+.header_menu {
+  width: 60%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.depth1 {
+  line-height: 100px;
+}
+.header_menu .depth1 > a {
+  color: #FFF;
+  font-size: 18px;
+  display: block;
+  padding: 0 20px;
+  margin: 0 15px;
+  position: relative;
+}
+.depth2_bg {
+  width: 100vw;
+  background: rgb(244, 248, 250);
+  position: absolute;
+  top: 100px;
+  left: 0;
+}
+.depth2_wrapper {
+  width: 1210px;
+  margin: 0 auto;
+  display: flex;
+}
+.depth2_wrapper h2 {
+  width: 170px;
+  color: #003d7c;
+  font-size: 32px;
+  margin-right: 35px;
+  margin-top: 10px;
+}
+.depth2 {
+  display: flex;
+  width: 100%;
+  padding: 50px 0 50px 0;
+  flex-wrap: wrap;
+}
+.depth2.first,
+.depth2.third {
+  flex-wrap: nowrap;
+}
+.depth2 > li {
+  padding: 0px 30px 0px 30px;
+  width: 25%;
+  border-left: 1px solid #eee;
+  border-right: 1px solid #eee;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.depth2.second > li {
+  width: 25%;
+}
+.depth2 > li > a.get_depth3 {
+  margin-bottom: 15px;
+}
+.depth2 > li a {
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+.depth3 li a {
+  color: #666;
+  font-size: 16px;
+}
+.depth1::before {
+  /* box-shadow: inset 0px -3px 0px 0px #003d7c; */
+  content: "";
+  width: 0%;
+  height: 3px;
+  position: absolute;
+  bottom: 1.5px;
+  left: 0;
+  transition: 0.3s ease all;
+}
+
+  /* color: #003d7c;  진한 파랑 */
+
+.depth2 a {
+  color: #145bd4; /* 옅은 파랑 */
+  font-size: 20px;
+  line-height: 20px;
+}
+.header_menu .depth1:hover::before {
+  width: 100%;
+}
+.header_tool {
+  width: 20%;
+  display: flex;
+  flex-direction: row;
+}
+.depth3 {
+  font-size: 16px;
+  color: #666;
+  line-height: 36px;
+}
+/* FIRST PAGE */
 .main_slide_wrapper {
   width: 100%;
   height: 100vh;
-  max-width: 1920px;
   overflow: hidden;
   position: relative;
   display: flex;
   justify-content: center;
 }
 .main_slide_wrapper li {
+  width: 100vw;
   position: absolute;
   top: 0;
   left: 0;
 }
 .main_slide_wrapper li img {
-  height: 100%;
+  width: 100%;
   display: block;
 }
 .main_slide_wrapper .main_slide2,
 .main_slide_wrapper .main_slide3 {
   opacity: 0;
+}
+
+/* SECOND PAGE */
+.section.second {
+  background-image: url(../img/main/second_page_img_01.png);
+  background-position: center;
+  background-size: cover;
+}
+
+/* THIRD PAGE */
+.section.third {
+  background-color: rgb(233, 239, 250);
 }
