--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,18 @@
   margin: 0;
   padding: 0;
   color: #333;
-  font-family: 'Roboto', 'Noto Sans KR';
+  font-family: "Roboto", "Noto Sans KR";
   letter-spacing: -0.02em;
+  word-break: keep-all;
 }
 body {
   overflow: hidden;
 }
-ul, ol, li {
+ul,
+ol,
+li {
   list-style: none;
-} 
+}
 a {
   text-decoration: none;
 }
@@ -33,6 +36,7 @@ header {
   top: 0;
   left: 0;
   z-index: 99;
+  transition: 0.5s all ease;
 }
 .header_wrapper {
   width: 100%;
@@ -64,7 +68,7 @@ header {
   line-height: 100px;
 }
 .header_menu .depth1 > a {
-  color: #FFF;
+  color: #fff;
   font-size: 18px;
   display: block;
   padding: 0 20px;
@@ -77,6 +81,7 @@ header {
   position: absolute;
   top: 100px;
   left: 0;
+  visibility: hidden;
 }
 .depth2_wrapper {
   width: 1210px;
@@ -87,7 +92,7 @@ header {
   width: 170px;
   color: #003d7c;
   font-size: 32px;
-  margin-right: 35px;
+  margin-right: 10px;
   margin-top: 10px;
 }
 .depth2 {
@@ -102,7 +107,7 @@ header {
 }
 .depth2 > li {
   padding: 0px 30px 0px 30px;
-  width: 25%;
+  width: calc(25% - 62px);
   border-left: 1px solid #eee;
   border-right: 1px solid #eee;
   display: flex;
@@ -115,9 +120,10 @@ header {
 .depth2 > li > a.get_depth3 {
   margin-bottom: 15px;
 }
-.depth2 > li a {
+.depth2 > li > a {
   margin-top: 0;
   margin-bottom: 50px;
+  color: #145bd4;
 }
 .depth3 li a {
   color: #666;
@@ -134,10 +140,10 @@ header {
   transition: 0.3s ease all;
 }
 
-  /* color: #003d7c;  진한 파랑 */
+/* color: #003d7c;  진한 파랑 */
 
 .depth2 a {
-  color: #145bd4; /* 옅은 파랑 */
+  /* 옅은 파랑 */
   font-size: 20px;
   line-height: 20px;
 }
@@ -149,11 +155,66 @@ header {
   display: flex;
   flex-direction: row;
 }
+
+.header_tool ul {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 50px;
+}
+.header_tool ul li {
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 15px;
+}
+.header_tool ul li:nth-of-type(2) {
+  padding-left: 0px;
+}
+.header_tool ul li:last-of-type {
+  border-left: 1px solid #eee;
+  border-right: 1px solid #eee;
+}
+.header_tool ul li a {
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header_tool ul li a i {
+  color: #fff;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .depth3 {
   font-size: 16px;
   color: #666;
-  line-height: 36px;
+  line-height: 32px;
 }
+/* ACTIVE HEADER */
+header.active {
+  background: #fff;
+}
+header.active .depth1 > a {
+  color: #666;
+}
+header.active .header_tool > ul > li > a,
+header.active .header_tool > ul > li > a > i {
+  color: #95c11f;
+}
+header.active .header_tool ul li:nth-of-type(2) a,
+header.active .header_tool ul li:nth-of-type(2) a i {
+  color: #666;
+}
+
+/* DROPDOWN MENU */
+.active {
+  visibility: visible;
+}
+
 /* FIRST PAGE */
 .main_slide_wrapper {
   width: 100%;
@@ -164,13 +225,14 @@ header {
   justify-content: center;
 }
 .main_slide_wrapper li {
-  width: 100vw;
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
+  overflow: hidden;
 }
 .main_slide_wrapper li img {
-  width: 100%;
+  height: 100%;
   display: block;
 }
 .main_slide_wrapper .main_slide2,
@@ -183,6 +245,18 @@ header {
   background-image: url(../img/main/second_page_img_01.png);
   background-position: center;
   background-size: cover;
+}
+.section.second .container {
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  border-right: 1px solid rgba(255, 255, 255, 0.5);
+  height: calc(100% - 100px);
+  transform: translateY(50px);
+}
+.business_text {
+  color: #fff;
+}
+.kisa_text {
+  color: #fff;
 }
 
 /* THIRD PAGE */
