--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,39 @@ header.active .header_tool ul li:nth-of-type(2) a i {
 .main_slide_wrapper li.active {
   opacity: 1;
 }
+.main_slide1 {
+  position: relative;
+}
+.slide_text {
+  width: 100%;
+  max-width: 1320px;
+  position: absolute;
+  background: #eee;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.slide_text .slide_p {
+  font-size: 18px;
+  color: #fff;
+  display: flex;
+  font-weight: 600;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.main_slide_p {
+  font-size: 50px;
+  color: #fff;
+  display: flex;
+}
+.main_slide_p .slide_blue {
+  color: #145bd4;
+}
+.main_slide_p .slide_green {
+  color: #95c11f;
+}
 
 /* SECOND PAGE */
 .section.second {
@@ -259,14 +292,69 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   border-right: 1px solid rgba(255, 255, 255, 0.5);
   height: calc(100% - 100px);
   transform: translateY(50px);
+  display: flex;
+  flex-direction: column;
+}
+.business {
+  width: 100%;
+  height: 150px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
 .business_text {
+  padding-top: 35px;
   color: #fff;
 }
 .kisa_text {
   color: #fff;
 }
-
+.business_1 {
+  height: 266px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  display: flex;
+  flex-direction: row;
+}
+.number_1 {
+  width: 7%;
+  font-size: 30px;
+  color: #fff;
+  font-weight: bold;
+  padding: 30px 45px;
+}
+.second_text {
+  width: 18%;
+}
+.second_slide_small {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 40%;
+  border-right: 1px solid rgba(255, 255, 255, 0.5);
+}
+.second_slide_small p {
+  color: #95c11f;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+.second_slide_small span {
+  color: #fff;
+  font-size: 14px;
+}
+.second_slide_bottom {
+}
+.second_slide_bottom a {
+  color: #fff;
+}
+.slide_bottom_btn {
+  color: #fff;
+}
+.swiper {
+  margin-left: unset !important;
+  margin-right: unset !important;
+}
 /* THIRD PAGE */
 .section.third {
   background-color: rgb(233, 239, 250);
