--- a/css/style.css
+++ b/css/style.css
@@ -304,12 +304,25 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   align-items: flex-start;
   justify-content: center;
 }
+.business_text1 {
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  padding-left: 20px;
+}
 .business_text {
   padding-top: 35px;
   color: #fff;
+  font-size: 16px;
+}
+.kisa_text1 {
+  font-size: 50px;
+  color: #fff;
+  padding-left: 20px;
 }
 .kisa_text {
   color: #fff;
+  font-size: 30px;
 }
 .business_1 {
   height: 266px;
@@ -318,7 +331,7 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   flex-direction: row;
 }
 .number_1 {
-  width: 7%;
+  width: 3%;
   font-size: 30px;
   color: #fff;
   font-weight: bold;
@@ -330,23 +343,58 @@ header.active .header_tool ul li:nth-of-type(2) a i {
 .second_slide_small {
   display: flex;
   flex-direction: column;
+  width: 37%;
   justify-content: space-between;
-  width: 40%;
   border-right: 1px solid rgba(255, 255, 255, 0.5);
+}
+.second_slide_small.cyber {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.second_slide_small2 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 35%;
+}
+.small2_text .business_text {
+  padding-top: 5px;
+}
+.search_a {
+  display: inline-block;
+  margin-top: 20px;
+  font-size: 18px;
+  color: #95c11f;
+  border-bottom: 2px solid #95c11f;
+}
+.search_b {
+  display: inline-block;
+  color: #666;
+  font-size: 18px;
+  margin-top: 10px;
+  border-bottom: 2px solid #666;
+}
+.slide_text_small {
 }
 .second_slide_small p {
   color: #95c11f;
   font-size: 20px;
   margin-bottom: 15px;
+  padding-top: 30px;
 }
 .second_slide_small span {
   color: #fff;
   font-size: 14px;
 }
 .second_slide_bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .second_slide_bottom a {
   color: #fff;
+  padding-bottom: 30px;
 }
 .slide_bottom_btn {
   color: #fff;
@@ -355,6 +403,37 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   margin-left: unset !important;
   margin-right: unset !important;
 }
+.service_slider {
+  width: 100%;
+}
+.service_item {
+  width: calc(100% / 6);
+  margin: 20px 10px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+}
+.service_slider ul {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.service_item a {
+  width: 100%;
+  height: 220px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.service_item a img {
+  max-width: 55px;
+}
+.service_item a span {
+  color: #fff;
+  margin-top: 20px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
 /* THIRD PAGE */
 .section.third {
   background-color: rgb(233, 239, 250);
