--- a/css/style.css
+++ b/css/style.css
@@ -422,6 +422,15 @@ header.active .header_tool ul li:nth-of-type(2) a i {
 }
 .service_slider {
   width: 100%;
+  position: relative;
+}
+.service_btn_wrapper {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
 }
 .service_item {
   width: calc(100% / 6);
