--- a/css/style.css
+++ b/css/style.css
@@ -226,8 +226,10 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   justify-content: center;
 }
 .main_slide_wrapper li {
+  width: 100%;
   height: 100vh;
   position: absolute;
+  object-fit: cover;
   top: 0;
   left: 0;
   overflow: hidden;
