--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,7 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   transition: 0.7s ease all;
 }
 .main_slide_wrapper li img {
+  width: 100%;
   height: 100%;
   display: block;
 }
