--- a/css/style.css
+++ b/css/style.css
@@ -513,29 +513,172 @@ header.active .header_tool ul li:nth-of-type(2) a i {
 .section.third {
   background-color: rgb(233, 239, 250);
 }
+.section.third .container {
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+.third_title {
+  width: 100%;
+  margin-bottom: 30px;
+}
+.third_title h5 {
+  font-size: 18px;
+  line-height: 20px;
+}
+.third_title h1 {
+  font-size: 50px;
+  line-height: 60px;
+}
 
+.notice_top {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.notice {
+  width: 50%;
+  border: 1px solid #000;
+}
+.photo_news {
+  width: 50%;
+  border: 1px solid #000;
+}
+.sub_title {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 25px;
+}
+.sub_title h4 {
+  font-size: 22px;
+}
+.tool_box {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  column-gap: 10px;
+}
+.tool_box li {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  border: 1px solid #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.tool_box li i {
+  font-size: 35px;
+}
+.tool_box li.more {
+  background: #333;
+}
+.tool_box li.more i {
+  color: #fff;
+}
+
+.news_con {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.news_wrap {
+  width: 50% - 40px;
+  margin: 0 10px;
+}
 /* FOOTER */
 footer {
   width: 100%;
 }
 .footer_intro {
+  background: #444;
+  padding: 30px 0;
+}
+.footer_intro .container {
+  display: flex;
+  justify-content: space-between;
 }
 .footer_intro .left {
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
+.footer_intro .left > li {
+  padding: 0 15px;
+  border-right: 1px solid #aaa;
+}
+.footer_intro .left > li:nth-of-type(4) {
+  border-right: none;
+}
+.footer_intro .left > li a {
+  font-size: 18px;
+  color: #888;
+}
+.footer_intro .left > li:nth-of-type(1) a {
+  color: #fff;
+}
+.footer_intro .left > li:nth-of-type(4) a {
+  color: #95c11f;
+}
 .footer_intro .right {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
+}
+.footer_intro .right > ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer_intro .right > ul li {
+  font-size: 18px;
+}
+.footer_intro .right > ul li a {
+  color: #888;
+  font-size: 18px;
+  padding: 0 5px;
+}
+.footer_intro .right > ul li:last-of-type a {
+  padding-right: 20px;
 }
 .footer_intro .right .sns {
   display: flex;
   justify-content: center;
+  align-items: center;
+  column-gap: 15px;
+}
+.footer_intro .right .sns li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #888;
+}
+.footer_intro .right .sns li a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.footer_intro .right .sns li a:hover {
+  background: #888;
+}
+.footer_intro .right .sns li a i {
+  font-size: 30px;
+  color: #444;
+}
+.footer_intro .right .sns li:last-of-type a i {
+}
+.footer_intro .right .sns li:last-of-type a {
 }
 .footer_intro .right .sns li:not(:first-of-type) {
   width: 48px;
   height: 48px;
   border-radius: 50%;
   background: #fff;
+}
+.footer_intro .right > ul li:first-of-type span {
+  color: #fff;
+  padding-right: 15px;
 }
