--- a/css/style.css
+++ b/css/style.css
@@ -542,7 +542,6 @@ header.active .header_tool ul li:nth-of-type(2) a i {
 }
 .photo_news {
   width: 50%;
-  border: 1px solid #000;
 }
 .sub_title {
   display: flex;
@@ -550,7 +549,7 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   margin-bottom: 25px;
 }
 .sub_title h4 {
-  font-size: 22px;
+  font-size: 25px;
 }
 .tool_box {
   display: flex;
@@ -583,9 +582,100 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   flex-wrap: wrap;
 }
 .news_wrap {
-  width: 50% - 40px;
+  width: calc(50% - 20px);
   margin: 0 10px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  background: #fff;
+  box-shadow: 5px 3px 1px #ddd;
 }
+.news_wrap img {
+  width: 100%;
+  display: block;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+.news_wrap p {
+  font-size: 18px;
+  margin: 20px 15px;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.notice_bottom {
+  display: flex;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 50px;
+  column-gap: 40px;
+}
+.society_wrap {
+  width: 30%;
+}
+.society_wrap img {
+  height: 100%;
+  border-radius: 20px;
+}
+.society_tab {
+  width: 40%;
+}
+
+.sns_wrap {
+  width: 100%;
+  max-width: 264px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.sns_wrap ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  background: #fff;
+  box-shadow: 5px 3px 1px #ddd;
+  border-radius: 20px;
+  padding: 30px;
+  column-gap: 30px;
+  row-gap: 30px;
+}
+.sns_wrap ul li {
+  width: 80px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.sns_wrap ul li img {
+  width: 50px;
+  height: 50px;
+}
+.sns_wrap ul li:first-of-type {
+  background: red;
+}
+.sns_wrap ul li:nth-of-type(2) {
+  background: yellow;
+}
+.sns_wrap ul li:nth-of-type(3) {
+  background: green;
+}
+.sns_wrap ul li:nth-of-type(4) {
+  background: navy;
+}
+.photo_news.notice {
+  width: 50%;
+}
+.notice_tab {
+  width: 50%;
+}
+.notice_wrap {
+  width: 100%;
+}
+
 /* FOOTER */
 footer {
   width: 100%;
