--- a/css/style.css
+++ b/css/style.css
@@ -538,6 +538,7 @@ header.active .header_tool ul li:nth-of-type(2) a i {
 }
 .notice {
   width: 50%;
+  border: 1px solid #000;
 }
 .photo_news {
   width: calc(50% - 60px);
@@ -546,7 +547,12 @@ header.active .header_tool ul li:nth-of-type(2) a i {
 .sub_title {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
+  line-height: 26px;
   margin-bottom: 25px;
+}
+.sub_title.thin {
+  margin-bottom: 5px;
 }
 .sub_title h4 {
   font-size: 25px;
@@ -556,6 +562,7 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   justify-content: flex-end;
   align-items: center;
   column-gap: 10px;
+  transform: translateY(-10px);
 }
 .tool_box li {
   width: 48px;
@@ -614,7 +621,7 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   column-gap: 40px;
 }
 .society_wrap {
-  width: 30%;
+  width: 100%;
 }
 .society_wrap img {
   height: 100%;
@@ -626,7 +633,6 @@ header.active .header_tool ul li:nth-of-type(2) a i {
 
 .sns_wrap {
   width: 100%;
-  max-width: 264px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -638,7 +644,7 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   background: #fff;
   box-shadow: 5px 3px 1px #ddd;
   border-radius: 20px;
-  padding: 30px;
+  padding: 15% 10%;
   column-gap: 30px;
   row-gap: 30px;
 }
@@ -670,10 +676,16 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   width: 50%;
 }
 .notice_tab {
-  width: 50%;
+  width: 100%;
 }
 .notice_wrap {
   width: 100%;
+  border-radius: 20px;
+  overflow: hidden;
+}
+.notice_wrap img {
+  height: 100%;
+  object-fit: cover;
 }
 
 /* FOOTER */
