--- a/css/style.css
+++ b/css/style.css
@@ -541,6 +541,11 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   width: 50%;
   border: 1px solid #000;
 }
+.notice_menu_list {
+  display: flex;
+  justify-content: flex-start;
+}
+
 .photo_news {
   width: calc(50% - 60px);
   margin-left: 60px;
@@ -553,7 +558,7 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   margin-bottom: 25px;
 }
 .sub_title.thin {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 .sub_title h4 {
   font-size: 25px;
@@ -681,8 +686,11 @@ header.active .header_tool ul li:nth-of-type(2) a i {
 }
 .notice_wrap {
   width: 100%;
+  height: 100%;
   border-radius: 20px;
   overflow: hidden;
+  box-sizing: border-box;
+  background: red;
 }
 .notice_wrap img {
   height: 100%;
