--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,10 @@ header {
   width: 170px;
   color: #003d7c;
   font-size: 32px;
-  margin-right: 10px;
-  margin-top: 10px;
+  margin-right: 20px;
+  margin-top: 40px;
+  text-align: right;
+  line-height: 40px;
 }
 .depth2 {
   display: flex;
