221208 포토뉴스 작업 완료

--- a/css/style.css
+++ b/css/style.css
@@ -756,8 +756,12 @@ header.active .header_tool ul li:nth-of-type(2) a i {
 
 .news_con {
   width: 100%;
+  overflow: hidden;
+}
+.news {
+  width: 200%;
   display: flex;
-  flex-wrap: wrap;
+  transition: 0.5s ease all;
 }
 .news_wrap {
   width: calc(50% - 20px);
