--- a/css/style.css
+++ b/css/style.css
@@ -852,6 +852,11 @@ header.active .header_tool ul li:nth-of-type(2) a i {
 }
 .notice_tab {
   width: 100%;
+  overflow: hidden;
+  height: 245px;
+}
+.notice_con {
+  transition: 0.5s ease all;
 }
 .notice_wrap {
   width: 100%;
