--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ a {
   flex-direction: row;
 }
 /* HEADER */
-header {
+header.pc {
   width: 100%;
   height: 100px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
@@ -44,6 +44,9 @@ header {
   justify-content: center;
   align-items: center;
 }
+header.mo {
+  display: none;
+}
 .logo {
   width: 20%;
   height: 100px;
@@ -58,7 +61,7 @@ header {
   max-width: 252px;
   max-height: 39px;
 }
-.header_menu {
+header.pc .header_menu {
   width: 60%;
   display: flex;
   flex-direction: row;
@@ -76,20 +79,7 @@ header {
   margin: 0 9px;
   position: relative;
 }
-@media screen and (max-width: 1600px) {
-  .header_menu .depth1 > a {
-    font-size: 15px;
-    padding: 0 10px;
-    margin: 0 5px;
-  }
-  .header_tool ul li a {
-    font-size: 15px;
-  }
-  .logo img {
-    width: 180px;
-    height: unset;
-  }
-}
+
 .depth2_bg {
   width: 100vw;
   background: rgb(244, 248, 250);
@@ -167,10 +157,13 @@ header {
   line-height: 20px;
 }
 
-.header_tool {
+header.pc .header_tool {
   width: 20%;
   display: flex;
   flex-direction: row;
+}
+header.pc  .header_tool .all_menu {
+  display: none;
 }
 
 .header_tool ul {
@@ -199,6 +192,9 @@ header {
   justify-content: center;
   align-items: center;
 }
+header.mo .header_tool ul li a {
+  color: #333;
+}
 .header_tool ul li a i {
   color: #fff;
   font-size: 18px;
@@ -206,24 +202,27 @@ header {
   justify-content: center;
   align-items: center;
 }
+header.mo .header_tool ul li a i {
+  color: #333;
+}
 .depth3 {
   font-size: 16px;
   color: #666;
   line-height: 32px;
 }
 /* ACTIVE HEADER */
-header.active {
+header.pc.active {
   background: #fff;
 }
-header.active .depth1 > a {
+header.pc.active .depth1 > a {
   color: #666;
 }
-header.active .header_tool > ul > li > a,
-header.active .header_tool > ul > li > a > i {
+header.pc.active .header_tool > ul > li > a,
+header.pc.active .header_tool > ul > li > a > i {
   color: #95c11f;
 }
-header.active .header_tool ul li:nth-of-type(2) a,
-header.active .header_tool ul li:nth-of-type(2) a i {
+header.pc.active .header_tool ul li:nth-of-type(2) a,
+header.pc.active .header_tool ul li:nth-of-type(2) a i {
   color: #666;
 }
 
@@ -253,7 +252,6 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   transition: 0.7s ease all;
 }
 .main_slide_wrapper li img {
-  width: 100%;
   height: 100%;
   display: block;
 }
@@ -329,6 +327,7 @@ header.active .header_tool ul li:nth-of-type(2) a i {
   bottom: 3%;
   width: 1090px;
   height: 670px;
+
 }
 .mainBanner li img {
   position: absolute;
@@ -983,8 +982,9 @@ footer {
   color: #444;
 }
 .footer_intro .right .sns li:last-of-type a i {
-}
-.footer_intro .right .sns li:last-of-type a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .footer_intro .right .sns li:not(:first-of-type) {
   width: 48px;
@@ -995,4 +995,319 @@ footer {
 .footer_intro .right > ul li:first-of-type span {
   color: #fff;
   padding-right: 15px;
+}
+
+@media screen and (max-width: 1600px) {
+  /* header */
+  .header_menu .depth1 > a {
+    font-size: 15px;
+    padding: 0 10px;
+    margin: 0 5px;
+  }
+  .header_tool ul li a {
+    font-size: 15px;
+  }
+  .logo img {
+    width: 180px;
+    height: unset;
+  }
+
+  /* slider */
+  .mainBanner {
+    right: 5%;
+  }
+
+  /* section 2 */
+  .section.second .container {
+    height: unset;
+    transform: unset;
+  }
+  
+  /* section 3 */
+  .third_title {
+    padding-top: 50px;
+  }
+
+}
+
+@media screen and (max-width: 1400px) {
+  /* common */
+
+  /* slider */
+  .slide_text {
+    padding: 0 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .slidebar {
+    width: max-content;
+    top: 600px;
+  }
+  .mainBanner {
+    display: none;
+  }
+
+  /* section 3 */
+  .third_title {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .notice_top {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .notice_bottom {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .sns_wrap ul li {
+    width: 60px;
+    height: 60px;
+  }
+  .sns_wrap ul li img {
+    width: 70%;
+    max-width: 50px;
+    height: unset;
+  }
+}
+
+@media screen and (max-width: 1240px) {
+  /* header */
+  header.mo {
+    height: 60px;
+    border-bottom: none;
+    position: relative;
+  }
+  header.pc {
+    display: none;
+  }
+  header.mo {
+    display: flex;
+    justify-content: space-between;
+  }
+  header.mo .all_menu{
+    display: flex;
+  }
+  header.mo .header_menu {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  header.mo .logo {
+    height: 60px;
+  }
+  header.mo .header_wrapper {
+    justify-content: space-between;
+  }
+  .header.mo .header_tool ul li a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  /* slider */
+
+
+  /* section2 */
+  .business {
+    height: 110px;
+  }
+    .business_text1 {
+      font-size: 16px;
+  }
+    .kisa_text1 {
+      font-size: 35px;
+  }
+  .number_1 {
+    font-size: 24px;
+    padding: 20px;
+  }
+  .kisa_text {
+    font-size: 20px;
+  }
+  .business_text {
+    padding-top: 20px;
+    font-size: 15px;
+  }
+  .second_text {
+    width: 11%;
+  }
+  .second_slide_small {
+    width: 45%;
+  }
+  .second_slide_small2 {
+    width: 39%;
+  }
+  .service_slider {
+    width: 80%;
+  }
+  .service_item a span {
+    margin-top: 10px;
+    font-size: 15px;
+    padding: 0 5px;
+}
+
+  /* section 3 */
+  .third_title h1 {
+    font-size: 35px;
+    line-height: 40px;
+  }
+  .third_title h5 {
+    font-size: 15px;
+    line-height: 20px;
+  }
+  .notice_menu_list li {
+    padding: 10px 15px;
+  }
+  .notice_menu_list li a {
+    font-size: 16px;
+  }
+  .notice_list li {
+    padding: 10px 0 10px 10px;
+    font-size: 15px;
+  }
+  .sub_title h4 {
+    font-size: 20px;
+}
+.tool_box li {
+  width: 30px;
+  height: 30px;
+}
+.sub_title {
+  margin-bottom: 15px;
+}
+.sns_tab {
+  display: none;
+}
+.society_wrap img {
+  width: 100%;
+  border-radius: 20px;
+} 
+.notice_bottom {
+  width: 100%;
+}
+.tool_box li i {
+  font-size: 22px;
+}
+
+
+/* footer */
+.footer_intro {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.footer_intro .left > li {
+  padding: 0 10px;
+}
+.footer_intro .left > li a {
+  font-size: 15px;
+}
+.footer_intro .right > ul li a {
+  font-size: 15px;
+}
+.footer_intro .right > ul li {
+  font-size: 15px;
+}
+.footer_intro .right .sns li:not(:first-of-type) {
+  width: 36px;
+  height: 36px;
+}
+.footer_intro .right .sns li a i {
+  font-size: 22px;
+}
+.footer_intro .right .sns li a:hover {
+  background: transparent;
+}
+}
+@media screen and (max-width: 1092px) {
+  /* slider */
+  .fp-tableCell {
+    height: unset !important;
+  }
+
+  /* section 2 */
+  .second_slide_small.cyber ul li a {
+    width: 80%;
+  }
+  .second_slide_small.cyber ul li a img {
+    width: 100%;
+  }
+  .second_slide_small2 {
+    width: 45%;
+}
+.business_1 {
+  flex-wrap: wrap;
+  height: unset;
+}
+.second_text {
+  width: 90%;
+}
+.slide_text_small {
+  height: 266px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.second_slide_small {
+  width: 100%;
+}
+.small_slider {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.second_slide_small2 {
+  width: 100%;
+  justify-content: space-between;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.second_slide_small2.service {
+  justify-content: center;
+padding-top: 20px;
+padding-bottom: 20px;
+}
+.service_slider {
+  width: calc(100% - 40px);
+  transform: translateX(20px);
+}
+.service_btn_wrapper .prev, .service_btn_wrapper .next {
+  width: 32px;
+  height: 32px;
+}
+.service_btn_wrapper .prev i, .service_btn_wrapper .next i {
+  font-size: 22px;
+}
+
+/* section3 */
+.third_title {
+  padding-top: 0;
+}
+}
+
+@media screen and (max-width: 991px) {
+  
+  /* section3 */
+  .third_title {
+    padding-top: 20px;
+  }
+  .notice_top {
+    flex-wrap: wrap;
+}
+.notice {
+  width: 100%;
+}
+.photo_news {
+  width: calc(100%);
+  margin-top: 30px;
+}
+.news_con {
+  overflow: visible;
+}
+.news_wrap p {
+  font-size: 15px;
+  margin: 10px 10px;
+
+}
 }
