--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ a {
   text-decoration: none;
 }
 /* COMMON */
+#fp-nav {
+  z-index: 40 !important;
+}
 .container {
   width: 100%;
   max-width: 1340px;
@@ -91,13 +94,17 @@ header.pc .header_menu {
 .depth2_bg {
   width: 100%;
   height: 0;
-  background: rgb(244, 248, 250);
+  background: #FFF;
   position: absolute;
   top: 100px;
   left: 0;
   opacity: 0;
   visibility: hidden;
   transition: 0.4s ease all;
+  background-image: url(../img/main/gnb_bg.png), url(../img/main/logo_bg.png);
+  background-repeat: no-repeat, no-repeat;
+  background-position: left top 1px, right bottom 1px;
+  box-shadow: inset 0px 15px 15px rgb(210 210 210);
 }
 /* DROPDOWN MENU */
 .depth2_bg.active {
@@ -105,6 +112,7 @@ header.pc .header_menu {
   transition: 0.4s ease all;
   height: 450%;
   visibility: visible;
+  z-index: 9999;
 }
 .depth2_wrapper {
   max-width: 1210px;
@@ -181,6 +189,7 @@ header.pc .header_tool {
   display: flex;
   flex-direction: row;
 }
+
 header.pc .header_tool .all_menu {
   display: none;
 }
@@ -203,8 +212,8 @@ header.pc .header_tool .all_menu {
 }
 .header_tool ul li:last-of-type {
   border-left: 1px solid #eee;
-  border-right: 1px solid #eee;
 }
+
 .header_tool ul li a {
   color: #fff;
   display: flex;
@@ -265,8 +274,10 @@ header.pc.active .header_tool ul li:nth-of-type(2) a i {
   transition: 0.7s ease all;
 }
 .main_slide_wrapper li img {
+  width: 100%;
   height: 100%;
   display: block;
+  object-fit: cover;
 }
 
 .main_slide_wrapper .main_slide_item {
